--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 <html>
     <head></head>
     <body>
+        <img src="https://raw.githubusercontent.com/kevinsunofficial/marsresort.github.io/main/finalproject.png">
     </body>
 </html>
