--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <head></head>
     <body>
+        <h2>Some Image Here</h2>
         <img src="https://raw.githubusercontent.com/kevinsunofficial/marsresort.github.io/main/finalproject.png">
+
     </body>
 </html>
