--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head></head>
     <body>
         <h2>Some Image Here</h2>
-        <img src="https://raw.githubusercontent.com/kevinsunofficial/marsresort.github.io/main/finalproject.png">
-
+        <div >
+            <img src="https://raw.githubusercontent.com/kevinsunofficial/marsresort.github.io/main/finalproject.png" style="max-width: 100%; max-height: 100%;">
+        </div>        
     </body>
 </html>
