--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html>
     <head></head>
     <body>
-        <h2>Some Image Here</h2>
         <div >
-            <img src="https://raw.githubusercontent.com/kevinsunofficial/marsresort.github.io/main/finalproject.png" style="max-width: 100%; max-height: 100%;">
+            <img src="https://raw.githubusercontent.com/kevinsunofficial/marsresort.github.io/main/finalproject.png" style="max-width:max-content;">
         </div>        
     </body>
 </html>
