--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
     <head></head>
     <body>
-        <div >
-            <img src="https://raw.githubusercontent.com/kevinsunofficial/marsresort.github.io/main/finalproject.png" style="max-width:max-content;">
+        <div>
+            <img src="https://raw.githubusercontent.com/kevinsunofficial/marsresort.github.io/main/finalproject.png" style="max-width:fit-content;">
         </div>        
     </body>
 </html>
