--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head></head>
     <body>
         <div>
-            <img src="https://raw.githubusercontent.com/kevinsunofficial/marsresort.github.io/main/finalproject.png" style="max-height:max-content;">
+            <img src="https://raw.githubusercontent.com/kevinsunofficial/marsresort.github.io/main/finalproject.png" width="1020" height="612">
         </div>
     </body>
 </html>
