--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
     <head></head>
     <body>
-        <div>
-            <img src="https://raw.githubusercontent.com/kevinsunofficial/marsresort.github.io/main/finalproject.png" width="1020" height="612">
+        <div style="max-height: 100%;">
+            <img src="https://raw.githubusercontent.com/kevinsunofficial/marsresort.github.io/main/finalproject.png">
         </div>
     </body>
 </html>
