--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head></head>
     <body>
-        <div style="max-height: 100%;">
+        <div style="max-height: max-content;">
             <img src="https://raw.githubusercontent.com/kevinsunofficial/marsresort.github.io/main/finalproject.png">
         </div>
     </body>
