--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
     <head></head>
     <body>
-        <div style="max-height: max-content;">
-            <img src="https://raw.githubusercontent.com/kevinsunofficial/marsresort.github.io/main/finalproject.png">
+        <div>
+            <img src="https://raw.githubusercontent.com/kevinsunofficial/marsresort.github.io/main/finalproject.png" width="2000" height="1020">
         </div>
     </body>
 </html>
