--- a/index.html
+++ b/index.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+        <style>
+            * {
+                margin: 0;
+                padding: 0;
+            }
+            .imgbox {
+                display: grid;
+                height: 100%;
+            }
+            .center-fit {
+                max-width: 100%;
+                max-height: 100vh;
+                margin: auto;
+            }
+        </style>
+    </head>
     <body>
-        <div>
-            <img src="https://raw.githubusercontent.com/kevinsunofficial/marsresort.github.io/main/finalproject.png" width="2000" height="1020">
+        <div class="imgbox">
+            <img class="center-fit" src="https://raw.githubusercontent.com/kevinsunofficial/marsresort.github.io/main/finalproject.png">
         </div>
     </body>
 </html>
